--- a/war/DinaProj.html
+++ b/war/DinaProj.html
@@ -50,15 +50,11 @@
 			application to display correctly.</div>
 	</noscript>
 
-	<h1>Dina's Tests</h1>
-
-
 	<div id="mainScreenContainer">
 		<div id="controlPanelContainer"></div>
 	</div>
 
-	<iframe src="javascript:''" id="gwt-table-to-excel-target"
-		tabIndex='-1' class="invisible"></iframe>
-
+	<!-- <iframe src="javascript:''" id="gwt-table-to-excel-target"
+		tabIndex='-1' class="invisible"></iframe> -->
 </body>
 </html>
